Changes to make swagger work for just GET /stations
