# swagger.json
@@ -2,7 +2,6 @@
   "openapi": "3.0.0",
   "info": {
     "title": "Job Controller",
-    "description": "Job controller api",
     "version": "0.0.1",
     "contact": {
       "email": "john@stilen.com"
@@ -12,7 +11,20 @@
       "url": "https://opensource.org/licenses/MIT"
     }
   },
-  "basePath": "/v1",
+  "servers": [
+    {
+      "url": "http://127.0.0.1",
+      "description": "Development server"
+    },
+    {
+      "url": "https://staging.gigantic-server.com",
+      "description": "Staging server"
+    },
+    {
+      "url": "https://api.gigantic-server.com",
+      "description": "Production server"
+    }
+  ],
   "tags": [
     {
       "name": "stations",
@@ -30,10 +42,6 @@
       "name": "jobs",
       "description": "Operations about jobs"
     }
-  ],
-  "schemes": [
-    "https",
-    "http"
   ],
   "paths": {
     "/stations": {
@@ -182,19 +190,22 @@
   },
   "definitions": {
     "ArrayOfStations": {
-      "type": "object",
-      "properties": {
-        "ManufacturingSite": {
-          "type": "string"
-        },
-        "JobType": {
-          "type": "string"
-        },
-        "StationID": {
-          "type": "string"
-        },
-        "NetToSerialMac": {
-          "type": "string"
+      "type": "array",
+      "items": {
+        "type": "object",
+        "properties": {
+          "ManufacturingSite": {
+            "type": "string"
+          },
+          "JobType": {
+            "type": "string"
+          },
+          "StationID": {
+            "type": "string"
+          },
+          "NetToSerialMac": {
+            "type": "string"
+          }
         }
       }
     },
@@ -248,9 +259,5 @@
         "name": "User"
       }
     }
-  },
-  "externalDocs": {
-    "description": "Find out more about Swagger",
-    "url": "http://swagger.io"
   }
 }
